--- a/css/site.css
+++ b/css/site.css
@@ -116,6 +116,11 @@ a:hover {
   background-color: var(--je-theme-100);
 }
 
+.section-page {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 /* #endregion Section Styles */
 
 /* region Footer */
