--- a/css/site.css
+++ b/css/site.css
@@ -66,7 +66,7 @@ a:hover {
 
 /* #region Home section */
 #home {
-  background-image: url(/img/space_bg.jpg);
+  background-image: url(/img/seattle_bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top left;
@@ -101,7 +101,11 @@ a:hover {
 }
 
 .mainLogo {
-  height: .5em;
+  height: 5.5em;
+}
+
+#mainHeader .mainTitle:nth-child(3) span {
+  letter-spacing: .1em;
 }
 
 /* #endregion Home Section */
@@ -184,7 +188,7 @@ footer i.bi:hover {
   }
 
   .mainLogo {
-    height: .5em;
+    height: 7.5em;
   }
 }
 
