Underline for Animated Issue Tracker link in footer

--- a/css/site.css
+++ b/css/site.css
@@ -55,7 +55,7 @@ a:hover {
   color: var(--je-theme-400);
 }
 
-a.link-gold {
+.text-shine-gold {
   background-image: linear-gradient(0.35turn, #b79453, #b79453 50%, #fff6a5, #b79453 81.25%, #b79453);
   background-size: 200% 100%;
   background-position: top right;
@@ -64,10 +64,10 @@ a.link-gold {
   -webkit-background-clip: text;
   background-clip: text;
   transition: all 0.25s ease-in-out;
-  animation: animate-bg 1.5s infinite linear;
+  animation: animate-text-shine 2s infinite linear;
 }
 
-@keyframes  animate-bg {
+@keyframes  animate-text-shine {
   0% {
     background-position: top right;
   }
@@ -80,19 +80,19 @@ a.link-gold {
     background-position: top right 100%;
   }
 }
-/*
-a.link-gold::before,
-a.link-gold::before,
-a.link-gold::before {
+
+.gold-underline {
+  text-decoration: none;
   
 }
 
-  a.link-gold:hover::before,
-  a.link-gold:active::before,
-  a.link-gold:focus::before {
-    
-  }
-*/
+.gold-underline:hover,
+.gold-underline:active,
+.gold-underline:focus {
+  text-decoration: underline;
+  color: #b79453;
+}
+
 .btn-primary {
   --bs-btn-bg: var(--je-theme-600);
   --bs-btn-border-color: var(--je-theme-600);
